--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/client.rs"
 tonic = "0.7"
 prost = "0.10"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+lazy_static = "1.4.0"
 
 [build-dependencies]
 tonic-build = "0.7"
