--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tonic = "0.7"
 prost = "0.10"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 lazy_static = "1.4.0"
+figlet-rs = "0.1.4"
 
 [build-dependencies]
 tonic-build = "0.7"
