--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ prost = "0.10"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 lazy_static = "1.4.0"
 figlet-rs = "0.1.4"
+error-chain = "0.12.4"
+libc = "0.2.135"
 
 [build-dependencies]
 tonic-build = "0.7"
